--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ name = "nsf_dei_research"
 version = "2025.0.0"
 requires-python = ">= 3.1"
 dependencies = [
-    datasets
+    "datasets"
     jupyterlab
     more-itertools
     nltk
