--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,25 +6,25 @@ name = "nsf_dei_research"
 version = "2025.0.0"
 requires-python = ">= 3.1"
 dependencies = [
-    "datasets"
-    jupyterlab
-    more-itertools
-    nltk
-    numpy
-    pydantic
-    pytorch
-    pyyaml
-    pip
-    pytest
-    python
-    jupyter
-    tqdm
-    transformers
-    spacy
-    scipy
-    scikit-learn
-    pandas
-    matplotlib
+    "datasets",
+    "jupyterlab",
+    "more-itertools",
+    "nltk",
+    "numpy",
+    "pydantic",
+    "pytorch",
+    "pyyaml",
+    "pip",
+    "pytest",
+    "python",
+    "jupyter",
+    "tqdm",
+    "transformers",
+    "spacy",
+    "scipy",
+    "scikit-learn",
+    "pandas"
+    "matplotlib",
 ]    
 authors = [
     {name = "Brooke Bergin", email = "beb74@georgetown.edu"},
