--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "scipy",
     "scikit-learn",
     "pandas"
-    "matplotlib",
+    "matplotlib"
 ]    
 authors = [
     {name = "Brooke Bergin", email = "beb74@georgetown.edu"},
