--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = ["setuptools >= 61.0"]
 
 [project]
-name = "nsf_dei_research"
+name = "freq_matcher"
 version = "2025.0.0"
 requires-python = ">= 3.1"
 dependencies = [
